# kilonova-heating-rate

./: .gitignore  CHANGES.md  LICENSE  LICENSE.rst  README.md  example.py  lightcurve.py  pyproject.toml  run_calculation.py  sed_integrator.py  temporary.py  test_RHS.py
.github/workflows/: build-and-test.yml
input_files/: sim_inspiral table.txt
kilonova/: __init__.py  kilonova_scipy.py
kilonova_heating_rate/: __init__.py  bateman.py  heat.py  heating_beta.py  root_finder.py  thermalization.py
kilonova_heating_rate/input_files/: ffraction.npy  kappa_effs_A85_238.npy
