[tool.poetry]
name = "kilonova"
version = "0.1.1"
description = "Calculate Kilonova light curves (kilonova model by Kenta Hotokezaka)"
authors = ["BasDorsman"]
include = ["kilonova/*.dat"]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "*"
numpy = "*"
scipy = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
