[tool.poetry]
name = "kilonova-heating-rate"
version = "0.1.1"
description = "Calculate Kilonova light curves (kilonova model by Kenta Hotokezaka)"
authors = ["BasDorsman"]
include = ["kilonova_heating_rate/*.dat"]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "*"
numpy = "*"
scipy = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
matplotlib = "*"
synphot = "*"

[tool.pytest.ini_options]
doctest_plus = true
doctest_optionflags = ["FLOAT_CMP"]
testpaths = ["kilonova_heating_rate"]

[tool.coverage.run]
omit = ["example.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
